fixed some bugs

--- a/css/gymso-style.css
+++ b/css/gymso-style.css
@@ -360,7 +360,7 @@ a:focus {
 -----------------------------------------*/
 
 .hero {
-  background-image: url('../images/hero-bg.jpg');
+  background-image: url('../images/bg-new.jpg');
   background-size: cover;
   background-position: top;
   background-repeat: no-repeat;
